# g-data-pipeline

./: .env.example  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/config/: mod.rs
src/handlers/: conversation.rs  insights.rs  mod.rs  upload.rs
src/models/: conversation.rs  job.rs  mod.rs  response.rs
src/services/: ai.rs  conversation.rs  database.rs  memory_db.rs  memory_redis.rs  memory_s3.rs  mod.rs  processor.rs  query_translator.rs  redis.rs  s3.rs
