[package]
name = "g-data-pipeline"
version = "0.1.0"
edition = "2021"

[features]
default = ["memory-services"]
memory-services = []
external-services = ["sqlx/postgres", "redis/tokio-comp", "rusoto_core", "rusoto_s3"]

[dependencies]
actix-web = "4.3"
actix-multipart = "0.6"
polars = { version = "0.34", features = ["csv", "lazy", "random", "strings", "describe"] }
plotters = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "time", "json"], optional = true }
redis = { version = "0.23", optional = true }
rusoto_core = { version = "0.48", optional = true }
rusoto_s3 = { version = "0.48", optional = true }
uuid = { version = "1.3", features = ["v4", "serde"] }
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
